versions/v3.6.0/doxygen/html/structbt__micp__mic__dev__register__param.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/structbt__micp__mic__dev__register__param.html
original_path: doxygen/html/structbt__micp__mic__dev__register__param.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

bt\_micp\_mic\_dev\_register\_param Struct Reference

[Connectivity](group__connectivity.md) » [Bluetooth APIs](group__bluetooth.md) » [Microphone Control Profile (MICP)](group__bt__gatt__micp.md)

Register parameters structure for Microphone Control Service.
[More...](#details)

`#include <[micp.h](micp_8h_source.md)>`

| Data Fields | |
| --- | --- |
| struct [bt\_micp\_mic\_dev\_cb](structbt__micp__mic__dev__cb.md) \* | [cb](#adbb6cf96e7f1d3e48b88cd3fbc5fd71a) |
|  | Microphone Control Profile callback structure. |

## Detailed Description

Register parameters structure for Microphone Control Service.

## Field Documentation

## [◆ ](#adbb6cf96e7f1d3e48b88cd3fbc5fd71a)cb

| struct [bt\_micp\_mic\_dev\_cb](structbt__micp__mic__dev__cb.md)\* bt\_micp\_mic\_dev\_register\_param::cb |
| --- |

Microphone Control Profile callback structure.

---

The documentation for this struct was generated from the following file:

- zephyr/bluetooth/audio/[micp.h](micp_8h_source.md)

- [bt\_micp\_mic\_dev\_register\_param](structbt__micp__mic__dev__register__param.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
